document page updated

--- a/app/globals.css
+++ b/app/globals.css
@@ -91,7 +91,7 @@
   }
 
   .header {
-    @apply min-h-[92px] min-w-full flex-nowrap bg-dark-100 flex w-full items-center justify-between gap-2 px-4;
+    @apply min-h-[92px] min-w-full w-full flex-nowrap bg-dark-100 flex items-center justify-between gap-2 px-4;
   }
 
   .document-list-container {
